--- a/micahglwilson0226/index.html
+++ b/micahglwilson0226/index.html
@@ -1,16 +1,50 @@
+
 <html>
+    <head>
 
-<head>
-    <title> Galavonni Wilson 02/26</title>
-    <script src="https://juxinglong.github.io/static/iframe-resizer/iframeResizer.contentWindow.min.js"></script>
+        <title>
+            Feb 26th Mt First Webpage
 
-</head>
-<body>
+        </title>
+    </head>
+    <body>
 
-    This is my first webpage
+        <a href="https://www.ou.edu/" target="_blank">
+            OU&#127863;
 
-    This is the second line
-</body>
+        </a>
+
+
+        <h1>
+            &#128509;
+
+        </h1>
+        <strike> mis &nbsp;&nbsp;&nbsp;&nbsp; 3033</strike>
+        <b> MIS 3033</b>
+        <i> MIS 3033</i>
+
+        MIS       3033
+        <br />
+        <br />
+        <br />
+        <h1> MIS 3033</h1>
+        <h2> MIS 3033</h2>
+        <h3> MIS 3033</h3>
+
+        <p>
+
+            Founded in 1890, the University of Oklahoma was actually established 17 years prior to Oklahoma’s statehood.
+            So, while this venerable institution is, of course, dedicated to the success of its students, the university
+            has always focused on contributing to the advancement of the entire state.
+            This mindset is reflected in our official mission:
+        </p>
+        
+        <p>
+            The mission of the University of Oklahoma is to provide the best possible educational experience for our students
+            through excellence in teaching, research and creative activity, and service to the state and society.
+        </p>
+        
+    </body>
 
 
 </html>
