--- a/HW8/index.html
+++ b/HW8/index.html
@@ -1,1 +1,188 @@
-index.html
+<html>
+<head>
+    <script src="https://juxinglong.github.io/static/iframe-resizer/iframeResizer.contentWindow.min.js"></script>
+    <title> HW 8 3033</title>
+
+    <style>
+        #main {
+            background-color: lightblue;
+            width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #header {
+            background-color: lightcoral;
+            color: dodgerblue;
+            font-size: 20pt;
+            font-weight: bold;
+        }
+
+        #footer {
+            background-color: #faf7f7;
+            color: dimgray;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        #content2 {
+            background-color: #ededed;
+        }
+
+
+        .title1 {
+            font-size: 30px;
+            font-weight: bold;
+        }
+
+        #leftdiv {
+            background-color: lightblue;
+            width: 400px;
+            display:flex;
+            flex-direction:column;
+            align-items:center;
+            justify-content:center;
+        }
+
+        #rightdiv {
+            background-color: lightblue;
+            width: 800px;
+        }
+
+        #content1
+        {display:flex;
+         flex-direction:row;
+
+        }
+
+        #updiv {
+
+
+        }
+
+        #downdiv{
+           display:flex;
+           flex-direction:row;
+
+
+        }
+
+        #interest{
+background-color:pink;
+
+
+        }
+        #eductaion {
+            background-color: pink;
+        }
+    </style>
+
+
+
+</head>
+
+
+<body>
+    <div id="main">
+        <div id="header">
+            Galavonni Wilson
+        </div>
+
+
+        <div id="content1">
+            <div id="leftdiv">
+                <div>
+                    <img src="static/head1.png" style="width:200px; border-radius:50%;" />
+                </div>
+                <div style="font-size:30px;">
+                    Galavonni Wilson
+                </div>
+                <div style="font-size:20px; color:dimgray;">
+                    Student in Management Information Systems
+                </div>
+                <div style="font-size:20px; color:dimgray;">
+                    The University of Oklahoma
+
+                </div>
+                <div>
+                    <a href="mailto:xinglong.ju@ou.edu" target="_blank">
+                        <img src="static/email.png" style="width:30px;" />
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <img src="static/linkedin.png" style="width:30px;" />
+                    </a>
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="static/twitter.png" style="width:30px;" />
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="static/instagram.png" style="width:30px;" />
+
+                    </a>
+                </div>
+
+            </div>
+            <div id="rightdiv">
+
+                <div id="updiv">
+                    Biography
+
+                    I am a Senior student in Management Information Systems at The University of Oklahoma. I am on the 2022/2023 job market.
+
+                    My study focuses on data analytics and I am good at programming (Console, Desktop and Web Applications) and databases management.
+
+                    For more information, please refer to my CV.
+
+                </div>
+
+                <div id="downdiv">
+                    <div id="interest">
+                        
+                        <span class=" ="title1"> 
+                        Interests</span>
+                        Analyst/Programmer
+                        Business Analyst
+                        Database Administration
+                        Web Developer
+                        Data Scientists
+
+
+                    </div>
+
+                    <div id="education">
+                        Education
+
+                        M.S. in Management Information Systems, 2024
+                        The University of Oklahoma
+
+                        B.E. in Management Information Systems, 2022
+                        The University of Oklahoma
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div id="content2">
+            <span class="title1"> Recent News </span>
+            <ul>
+                <li>
+                    Learning C# Web Application Design
+                </li>
+                <li>
+                    Learning C# EF
+                </li>
+
+            </ul>
+        </div>
+        <div id="footer">
+            Design and Publish by Galavonni Wilson
+        </div>
+
+    </div>
+
+
+
+</body>
+
+</html>
