--- a/EXAM2/index.html
+++ b/EXAM2/index.html
@@ -1,28 +1,138 @@
 <html>
 <head>
-    <title>  MIS 3033 EXAM 2 [Exam Code]</title>
+    <title>  MIS 3033 EXAM 2 [AWNB]</title>
     <link rel="icon" href="static/head1.png" />
     <link rel="stylesheet" href="static/site/css" />
+
+    <style>
+        #maindiv {
+            width: 1000px;
+        }
+
+
+        #top {
+            height: 100px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #body {
+            display: flex;
+            flex-direction: row;
+        }
+
+        #left {
+            border-width: 2px;
+            border-color: darkgray;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 480px;
+        }
+
+        #right {
+            width: 480px;
+        }
+
+
+
+
+        #footer {
+            background-color: aliceblue;
+            height: 50px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            border-radius:10px;
+        }
+    </style>
 
 </head>
 
 
 <body>
+    [AWNB]
+
+    <div id="maindiv">
+        <div id="top">
+            <span style="font-size:30pt; color:dodgerblue; text-transform:uppercase; font-weight:bold;">
+                I love programming!
+            </span>
+            <img src="a.svg" style="height:100px;" />
+
+        </div>
+
+
+        <div id="body">
+
+            <div id="left">
+                <span style="font-size: 20pt; color: dodgerblue; font-weight: bold;">
+                    I love MIS3033
+                </span>
+
+                <div>
+                    <img src="b.svg" style="width:400px;" />
+                </div>
+
+            </div>
+
+
+            <div id="right">
+                <div id="learn">
+                    <span style="font-size: 20px; background-color: lightskyblue; font-weight: bold; border-radius:5px; ">
+                        What I already learned:
+                    </span>
+                    <ul>
+                        <li> C#</li>
+                        <li> C# Entity Framework</li>
+                        <li> Database Sqlite</li>
+                        <li> HTML & CSS</li>
+
+                    </ul>
+
+                </div>
+
+                <div id="next">
+                    <span style="font-size: 20px; font-weight: bold; border-radius:5px; ">
+                        What I am going to learn next:
+                    </span>
+                    <ol>
+                        <li> JavaScript</li>
+                        <li> BootStrap</li>
+                        <li> ASP.NET MVC</li>
+                        <li> Web RESt API</li>
+
+                    </ol>
+                </div>
+
+
+
+
+            </div>
+
+
+
+        </div>
+
+
+
+        <div id="footer">
+            <span style="color:darkgrey;">
+                Designed and Developed by Galavonni Wilson MIS 3033 Exam 2
+            </span>
+        </div>
+
+
+    </div>
+
+
 
 
 </body>
-[Exam Code]
-<img src="static/img/a.svg" style="height:50px;" />
-<img src="static/img/b.svg" style="height:50px;" />
-<img src="static/img/css.svg" style="height:50px;" />
-<img src="static/img/head1.png" style="height:50px;" />
-<img src="static/img/ head2.png" style="height:50px;" />
-<img src="static/img/html.svg" style="height:50px;" />
-<img src="static/img/javascript.svg" style="height:50px;" />
-<img src="static/img/linkedin.png" style="height:50px;" />
-<img src="static/img/linkedin.png" style="height:50px;" />
-<img src="static/img/logo.svg" style="height:50px;" />
-<img src="static/img/sqlite.svg" style="height:50px;" />
 
 
 
